# fast-api-study-room

./: README.md  dependencies.py  main.py  pyproject.toml
configs/: config.py  db.py
models/: __init__.py  facility.py  reservation.py  reservationDisable.py  review.py  student.py  study_room.py
repositories/: facility_repository.py  reservation_disable_repository.py  reservation_repository.py  review_repository.py  student_repository.py  study_room_repository.py
routers/: auth_router.py  facility_router.py  reservation_router.py  review_router.py  student_router.py  study_room_router.py
schemas/: facility.py  reservation.py  reservation_disable.py  review.py  student.py  study_room.py
services/: auth_service.py  facility_service.py  reservation_service.py  review_service.py  study_room_service.py
