[project]
name = "sesac-study-room"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.129.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
